--- a/marketing/templates/marketing/preview_main.html
+++ b/marketing/templates/marketing/preview_main.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-{% block title %}Template Preview | Pillar & Post{% endblock % %}
+{% block title %}Template Preview | Pillar & Post{% endblock %}
 
 {% block content %}
 <div class="theme-{{ template_id }}">
